--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,51 @@
   "editor.detectIndentation": false,
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
-  "jest.autoEnable": false
+  "eslint.autoFixOnSave": true,
+  "jest.autoEnable": false,
+  "files.associations": {
+    ".envrc": "shellscript",
+    "*.idl": "avro",
+    "ios": "cpp",
+    "array": "cpp",
+    "iterator": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "vector": "cpp",
+    "__split_buffer": "cpp",
+    "__tree": "cpp",
+    "bitset": "cpp",
+    "deque": "cpp",
+    "initializer_list": "cpp",
+    "map": "cpp",
+    "queue": "cpp",
+    "utility": "cpp",
+    "__bit_reference": "cpp",
+    "__functional_base": "cpp",
+    "algorithm": "cpp",
+    "atomic": "cpp",
+    "chrono": "cpp",
+    "functional": "cpp",
+    "limits": "cpp",
+    "locale": "cpp",
+    "memory": "cpp",
+    "ratio": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "__config": "cpp",
+    "__nullptr": "cpp",
+    "__locale": "cpp",
+    "__string": "cpp",
+    "cstddef": "cpp",
+    "exception": "cpp",
+    "new": "cpp",
+    "stdexcept": "cpp",
+    "typeinfo": "cpp",
+    "__hash_table": "cpp",
+    "unordered_set": "cpp",
+    "__mutex_base": "cpp",
+    "__functional_03": "cpp",
+    "__tuple": "cpp"
+  }
 }
