--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/CRoaringUnityBuild"]
-	path = src/CRoaringUnityBuild
+	path = src/emcc/CRoaringUnityBuild
 	url = https://github.com/lemire/CRoaringUnityBuild
