--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,16 @@
     "esModuleInterop": false,
     "experimentalDecorators": false,
     "forceConsistentCasingInFileNames": true,
+    "strictFunctionTypes": true,
+    "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
+    "pretty": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noStrictGenericChecks": false,
+    "strictNullChecks": true,
+    "strict": true,
+    "strictPropertyInitialization": true,
     "importHelpers": false,
     "newLine": "LF",
     "moduleResolution": "node",
