--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/CRoaringUnityBuild"]
-	path = src/emcc/CRoaringUnityBuild
+[submodule "src/cpp/CRoaringUnityBuild"]
+	path = src/cpp/CRoaringUnityBuild
 	url = https://github.com/lemire/CRoaringUnityBuild
