--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,41 @@
 {
   "compilerOptions": {
     "allowJs": false,
-    "target": "es2017",
-    "module": "commonjs",
-    "outDir": "dist",
-    "lib": ["esnext"],
-    "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
+    "allowSyntheticDefaultImports": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "alwaysStrict": true,
+    "baseUrl": ".",
+    "charset": "utf8",
     "declaration": true,
     "emitDecoratorMetadata": false,
     "esModuleInterop": false,
     "experimentalDecorators": false,
     "forceConsistentCasingInFileNames": true,
-    "strictFunctionTypes": true,
-    "noImplicitAny": true,
+    "importHelpers": false,
+    "lib": ["esnext"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "newLine": "LF",
     "noFallthroughCasesInSwitch": true,
-    "pretty": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noStrictGenericChecks": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noStrictGenericChecks": false,
-    "strictNullChecks": true,
+    "outDir": "dist",
+    "pretty": true,
+    "rootDir": "src/ts",
     "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "importHelpers": false,
-    "newLine": "LF",
-    "moduleResolution": "node",
-    "types": ["webassembly-js-api", "node"]
+    "target": "es2017"
   },
+  "exclude": ["**/node_modules", "**/.eslintcache", "**/dist", "temp"],
+  "include": ["src"],
   "typeAcquisition": {
     "enable": true
-  },
-  "include": ["src"],
-  "exclude": ["**/node_modules", "**/.eslintcache", "**/dist", "temp"]
+  }
 }
