--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "type": "git",
     "url": "git+https://github.com/SalvatorePreviti/roaring-wasm.git"
   },
-  "keywords": ["roaring"],
+  "keywords": [
+    "roaring"
+  ],
   "engines": {
     "node": ">=8.10.0"
   },
@@ -32,7 +34,7 @@
     "@types/node": "^9.6.5",
     "@types/webassembly-js-api": "0.0.1",
     "binaryen": "^46.0.0",
-    "chalk": "^2.3.2",
+    "chalk": "^2.4.0",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -43,7 +45,7 @@
     "jest": "^22.4.3",
     "lebab": "^2.7.7",
     "mkdirp": "^0.5.1",
-    "prettier": "^1.12.0",
+    "prettier": "^1.12.1",
     "ts-jest": "^22.4.3",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
