--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
 if declare -Ff use_nvm >/dev/null; then
   use nvm v8.10.0
 fi
-export isLocal=true
-~/emsdk/emsdk_env.sh
+source ~/emsdk/emsdk_env.sh
+PATH=$BINARYEN_ROOT/bin:$PATH
