--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,65 +7,5 @@
   "prettier.eslintIntegration": false,
   "prettier.parser": "babylon",
   "prettier.requireConfig": true,
-  "jest.autoEnable": false,
-  "files.associations": {
-    ".envrc": "shellscript",
-    "*.idl": "avro",
-    "ios": "cpp",
-    "array": "cpp",
-    "iterator": "cpp",
-    "string": "cpp",
-    "string_view": "cpp",
-    "vector": "cpp",
-    "__split_buffer": "cpp",
-    "__tree": "cpp",
-    "bitset": "cpp",
-    "deque": "cpp",
-    "initializer_list": "cpp",
-    "map": "cpp",
-    "queue": "cpp",
-    "utility": "cpp",
-    "__bit_reference": "cpp",
-    "__functional_base": "cpp",
-    "algorithm": "cpp",
-    "atomic": "cpp",
-    "chrono": "cpp",
-    "functional": "cpp",
-    "limits": "cpp",
-    "locale": "cpp",
-    "memory": "cpp",
-    "ratio": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "__config": "cpp",
-    "__nullptr": "cpp",
-    "__locale": "cpp",
-    "__string": "cpp",
-    "cstddef": "cpp",
-    "exception": "cpp",
-    "new": "cpp",
-    "stdexcept": "cpp",
-    "typeinfo": "cpp",
-    "__hash_table": "cpp",
-    "unordered_set": "cpp",
-    "__mutex_base": "cpp",
-    "__functional_03": "cpp",
-    "__tuple": "cpp",
-    "roaring.c": "cpp",
-    "istream": "c",
-    "lzlib.h": "c",
-    "stdint.h": "c",
-    "encoder.h": "c",
-    "lzip.h": "c",
-    "stdbool.h": "c",
-    "list": "c",
-    "set": "c",
-    "encoder_base.h": "c",
-    "fast_encoder.h": "c",
-    "lzmaenc.h": "c",
-    "lzmadec.h": "c",
-    "lzfind.h": "c",
-    "types.h": "c"
-  }
+  "jest.autoEnable": false
 }
