--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "chalk": "^2.4.0",
     "del": "^3.0.0",
     "delete-empty": "^2.0.0",
-    "documentation": "^6.2.0",
+    "documentation": "^6.3.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jest": "^21.15.0",
+    "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "globby": "^8.0.1",
     "jest": "^22.4.3",
@@ -48,8 +48,11 @@
     "prettier": "^1.12.1",
     "ts-jest": "^22.4.4",
     "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.11.0",
+    "tslint-config-prettier": "^1.12.0",
     "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "idisposable": "^0.1.1"
   }
 }
