--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "roaring-wasm": "dist"
   },
   "devDependencies": {
+    "idisposable": "^0.1.1",
     "@types/jest": "^22.2.3",
     "@types/node": "^8.10.9",
     "@types/webassembly-js-api": "0.0.1",
     "chalk": "^2.4.0",
     "del": "^3.0.0",
     "delete-empty": "^2.0.0",
-    "documentation": "^6.3.0",
+    "documentation": "^6.3.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
@@ -51,8 +52,5 @@
     "tslint-config-prettier": "^1.12.0",
     "tslint-microsoft-contrib": "^5.0.3",
     "typescript": "^2.8.3"
-  },
-  "dependencies": {
-    "idisposable": "^0.1.1"
   }
 }
