--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,26 @@
   "prettier.eslintIntegration": false,
   "prettier.parser": "babylon",
   "prettier.requireConfig": true,
-  "jest.autoEnable": false
+  "jest.autoEnable": false,
+  "files.associations": {
+    ".envrc": "shellscript",
+    "*.idl": "avro",
+    "__bit_reference": "c",
+    "__functional_base": "c",
+    "algorithm": "c",
+    "atomic": "c",
+    "bitset": "c",
+    "chrono": "c",
+    "deque": "c",
+    "functional": "c",
+    "iterator": "c",
+    "limits": "c",
+    "locale": "c",
+    "memory": "c",
+    "ratio": "c",
+    "system_error": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "vector": "c"
+  }
 }
