--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,13 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
-  "useTabs": false
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": "dist/lib/roaring-wasm/roaring-wasm-module.js",
+      "options": {
+        "printWidth": 1073741823
+      }
+    }
+  ]
 }
