--- a/package.json
+++ b/package.json
@@ -30,20 +30,21 @@
     "roaring-wasm": "dist"
   },
   "devDependencies": {
-    "idisposable": "^0.1.1",
     "@types/jest": "^22.2.3",
     "@types/node": "^8.10.9",
     "@types/webassembly-js-api": "0.0.1",
-    "chalk": "^2.4.0",
+    "chalk": "^2.4.1",
     "del": "^3.0.0",
     "delete-empty": "^2.0.0",
-    "documentation": "^6.3.1",
+    "documentation": "^6.3.2",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-node": "^6.0.1",
     "globby": "^8.0.1",
+    "hoek": "^5.0.3",
+    "idisposable": "^0.1.3",
     "jest": "^22.4.3",
     "mkdirp": "^0.5.1",
     "prettier": "^1.12.1",
