update dev packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,28 @@
 {
   "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
-  "plugins": ["node", "import"],
+  "plugins": ["node", "import", "jest"],
   "parserOptions": {
     "ecmaVersion": 8,
     "ecmaFeatures": {
       "globalReturn": false,
       "generators": true,
-      "objectLiteralDuplicateProperties": false,
-      "experimentalObjectRestSpread": true
+      "objectLiteralDuplicateProperties": false
     },
     "sourceType": "module"
   },
   "rules": {
+    "padding-line-between-statements": [
+      "warn",
+      { "blankLine": "always", "prev": "directive", "next": "*" },
+      { "blankLine": "always", "prev": "function", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "function" },
+      { "blankLine": "always", "prev": "class", "next": "*" },
+      { "blankLine": "always", "prev": "*", "next": "class" },
+      { "blankLine": "always", "prev": "*", "next": "cjs-export" },
+      { "blankLine": "always", "prev": "cjs-export", "next": "*" }
+    ],
+    "valid-jsdoc": "warn",
+    "lines-between-class-members": ["warn", "always"],
     "no-console": "warn",
     "node/shebang": "off",
     "prefer-template": "warn",
