--- a/package.json
+++ b/package.json
@@ -30,28 +30,29 @@
     "roaring-wasm": "dist"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/node": "^8.10.9",
+    "@types/jest": "^23.3.6",
+    "@types/node": "^10.12.0",
     "@types/webassembly-js-api": "0.0.1",
     "chalk": "^2.4.1",
     "del": "^3.0.0",
     "delete-empty": "^2.0.0",
-    "documentation": "^7.1.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-node": "^6.0.1",
+    "documentation": "^8.1.2",
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.25.1",
+    "eslint-plugin-node": "^7.0.1",
     "globby": "^8.0.1",
-    "hoek": "^5.0.3",
+    "hoek": "^5.0.4",
     "idisposable": "^0.1.4",
-    "jest": "^23.0.1",
+    "jest": "^23.6.0",
+    "jest-config": "^23.6.0",
     "mkdirp": "^0.5.1",
-    "prettier": "^1.13.2",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "typescript": "^2.8.3"
+    "prettier": "^1.14.3",
+    "ts-jest": "^23.10.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-microsoft-contrib": "^5.2.1",
+    "typescript": "^3.1.3"
   }
 }
