--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,12 @@
 {
-  "recommendations": ["ms-vscode.cpptools", "eg2.tslint", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "xaver.clang-format"]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "pflannery.vscode-versionlens",
+    "visualstudioexptteam.vscodeintellicode",
+    "donjayamanne.githistory",
+    "eamodio.gitlens",
+    "ms-vscode.cpptools",
+    "xaver.clang-format"
+  ]
 }
