--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,42 @@
+src/cpp/**/*
+docs/**/*
+submodules/**/*
+.clang-tidy
+
+# Dependencies and vendor
+vendor
+typings
 node_modules
-dist/README.md
+bower_components
+jspm_packages
+package-lock.json
+/.pnp
+.pnp.js
+.serverless
+.webpack
+.next/
+
+# Build outputs
+bundle.js
+*.bundle.js
+.serverless
+build/Debug
+build/Release
+*.min.*
+*-min.*
+
+# Cache
+.tmp
+.temp
+.cache
+.fuse_hidden*
+.fusebox
+.dynamodb
+
+# Test coverage and snapshots
+lib-cov
+coverage
+.nyc_output
+__snapshots__
+
+.vercel
