--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,13 @@
 {
+  "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "printWidth": 140,
-  "semi": false,
-  "singleQuote": true,
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "css",
+  "jsxSingleQuote": false,
+  "printWidth": 120,
+  "semi": true,
+  "singleQuote": false,
   "tabWidth": 2,
-  "trailingComma": "none",
-  "useTabs": false,
-  "overrides": [
-    {
-      "files": "dist/lib/roaring-wasm/roaring-wasm-module.js",
-      "options": {
-        "printWidth": 1073741823
-      }
-    }
-  ]
+  "trailingComma": "all",
+  "useTabs": false
 }
