--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "node scripts/clean.js",
     "build": "node scripts/build.js",
     "start": "node scripts/build.js",
-    "test": "node scripts/build.js"
+    "test": "node scripts/build.js",
+    "doc": "typedoc ./src/ts/index.ts"
   },
   "repository": {
     "type": "git",
