--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roaring-wasm-dev",
+  "name": "@roaring-wasm/workspace",
   "private": true,
   "version": "0.1.11",
   "description": "Node JS porting of Roaring using WebAssembly",
@@ -29,21 +29,20 @@
     "url": "https://github.com/SalvatorePreviti/roaring-wasm/issues"
   },
   "homepage": "https://github.com/SalvatorePreviti/roaring-wasm#readme",
-  "_moduleAliases": {
-    "roaring-wasm": "dist"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@balsamic/eslint-config": "^0.4.1",
-    "@octokit/rest": "^19.0.8",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.1.7",
+    "@types/node": "^20.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "benchmark": "^2.1.4",
@@ -63,8 +62,10 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
+    "terser": "^5.17.4",
     "ts-node": "^10.9.1",
-    "tslib": "^2.5.0",
+    "tslib": "^2.5.2",
+    "tsup": "^6.7.0",
     "typedoc": "^0.24.7",
     "typescript": "^5.0.4"
   }
