--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,8 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "allowJs": false,
     "noEmit": false,
-    "outDir": "dist"
+    "outDir": "build/tsc",
+    "pretty": true
   },
-  "exclude": ["test/**/*", "node_modules/**/*", ".tmp/**/*", "temp/**/*", "dist/**/*", "docs/**/*"]
+  "include": ["src/ts/**/*"],
+  "exclude": ["test/**/*", "node_modules/**/*", ".tmp/**/*", "temp/**/*", "packages/roaring-wasm/**/*", "docs/**/*"]
 }
