async initialize, browser tests

--- a/packages/roaring-wasm-src/package.json
+++ b/packages/roaring-wasm-src/package.json
@@ -15,5 +15,8 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "browser": {
+    "./lib/roaring-wasm-module/index.js": "./lib/roaring-wasm-module/index.browser.mjs"
   }
 }
