--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {
+    "roaring-wasm": "*",
+    "roaring-wasm-src": "*"
+  },
   "devDependencies": {
     "@balsamic/eslint-config": "^0.4.1",
     "@types/chai": "^4.3.5",
