--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,18 @@ jobs:
       - run: npm ci
       - run: npm run lint:ci # run linting
       - run: npm run build # build the library and run tests
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
       - run: npm run doc # build the documentation
 
       - name: Deploy documentation 🚀
