--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "doc": "typedoc ./src/ts/index.ts",
-    "web-app": "vite --config ./test/web/vite.config.ts"
+    "web-app": "vite --config ./test/web/vite.config.ts",
+    "web-test": "playwright test"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@balsamic/eslint-config": "^0.4.1",
+    "@playwright/test": "^1.34.0",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
