--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "node scripts/clean.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "doc": "typedoc ./src/ts/index.ts",
+    "doc": "typedoc ./packages/roaring-wasm/index.d.ts --tsconfig ./packages/roaring-wasm/tsconfig.json",
     "web-app": "vite --config ./test/web/vite.config.ts",
     "web-test": "playwright test"
   },
