update roaring, fix lint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,15 +59,8 @@
   "eslint.format.enable": true,
   "eslint.lintTask.enable": true,
   "eslint.validate": [],
-  "javascript.format.enable": true,
   "javascript.format.semicolons": "insert",
-  "typescript.format.enable": true,
   "typescript.format.semicolons": "insert",
   "files.eol": "\n",
-  "cmake.sourceDirectory": "/Users/sp/my/roaring-wasm/submodules/CRoaring/src",
-  "files.associations": {
-    "roaring.h": "c",
-    "roaring_array.h": "c",
-    "global.h": "c"
-  }
+  "git.detectSubmodules": true
 }
