--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,8 +42,8 @@
     "editor.formatOnSave": true
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.fixAll.eslint": true
+    "source.fixAll": "explicit",
+    "source.fixAll.eslint": "explicit"
   },
   "[c]": {
     "editor.defaultFormatter": "xaver.clang-format"
